// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`confirmation email > matches the snapshot, and carries the confirm link as a button and as plain text > html 1`] = `
"<!doctype html>
<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
<meta name="x-apple-disable-message-reformatting">
<meta name="color-scheme" content="light dark">
<meta name="supported-color-schemes" content="light dark">
<title>Confirm your Pearl of the Day · أَكِّدِ اشْتِرَاكَك</title>
<style>
  body { margin: 0; padding: 0; background: #041621; }
  a { color: #c8dde2; }
  @media (max-width: 620px) { .px { padding-left: 20px !important; padding-right: 20px !important; } }
</style>
</head>
<body style="margin:0;padding:0;background:#041621;">
<div style="display:none;max-height:0;overflow:hidden;opacity:0;color:#041621;">Confirm to start receiving one Arabic word a day.</div>
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0" bgcolor="#041621" style="background:#041621;background-image:linear-gradient(180deg,#0e3a47 0%,#041621 420px);">
<tr><td align="center" style="padding:28px 12px 40px;">
<table role="presentation" width="600" cellpadding="0" cellspacing="0" border="0" style="width:100%;max-width:600px;">

<tr><td align="center" style="padding:8px 0 18px;">
  <p lang="ar" dir="rtl" style="margin:0;font-family:'Noto Naskh Arabic', 'Geeza Pro', 'Arabic Typesetting', 'Traditional Arabic', Tahoma, serif;font-size:44px;line-height:1.3;color:#f4efe3;">دُرَر</p>
</td></tr>
<tr><td class="px" align="center" style="padding:0 40px;">
  <p style="margin:0 0 10px;font-family:'Cormorant Garamond', Georgia, 'Times New Roman', serif;font-size:28px;line-height:1.25;color:#f4efe3;">One tap to confirm</p>
  <p style="margin:0;font-family:-apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;font-size:15px;line-height:1.6;color:#c8dde2;">Confirm your address and a new Arabic word will reach you each morning at about 7:00 (Amsterdam time): the word, its meaning, and a sentence to hold it.</p>
</td></tr>
<tr><td align="center" style="padding:28px 20px 4px;"><table role="presentation" cellpadding="0" cellspacing="0" border="0" align="center" style="margin:0 auto;">
  <tr><td align="center" bgcolor="#dff0ef" style="border-radius:999px;background:#dff0ef;">
    <a href="https://durar.example/subscribe/confirm?token=xyz" style="display:inline-block;padding:14px 30px;font-family:-apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;font-size:15px;font-weight:600;line-height:1;color:#06232b;text-decoration:none;border-radius:999px;">Confirm my subscription</a>
  </td></tr>
</table></td></tr>
<tr><td class="px" align="center" style="padding:14px 40px 0;font-family:-apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;font-size:12px;line-height:1.6;color:#8fb0b8;">
  <p style="margin:0;">Or open this link: <a href="https://durar.example/subscribe/confirm?token=xyz" style="color:#c8dde2;word-break:break-all;">https://durar.example/subscribe/confirm?token=xyz</a></p>
  <p style="margin:6px 0 0;">The link works for 7 days.</p>
</td></tr>
<tr><td class="px" align="center" style="padding:28px 40px 0;font-family:-apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;font-size:12px;line-height:1.6;color:#8fb0b8;">
  <p style="margin:0 0 8px;">Someone (hopefully you) asked to get the Pearl of the Day at this address. If it wasn’t you, ignore this email and you won’t hear from us again.</p>
  <p style="margin:0;"><a href="https://durar.example/unsubscribe?token=abc.def" style="color:#c8dde2;text-decoration:underline;">Unsubscribe</a> &nbsp;·&nbsp; <a href="https://durar.example/privacy" style="color:#c8dde2;text-decoration:underline;">Privacy</a></p>
</td></tr>
</table>
</td></tr>
</table>
</body>
</html>"
`;

exports[`confirmation email > matches the snapshot, and carries the confirm link as a button and as plain text > subject 1`] = `"Confirm your Pearl of the Day · أَكِّدِ اشْتِرَاكَك"`;

exports[`daily email > matches the snapshot > html 1`] = `
"<!doctype html>
<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
<meta name="x-apple-disable-message-reformatting">
<meta name="color-scheme" content="light dark">
<meta name="supported-color-schemes" content="light dark">
<title>Pearl of the Day: بَحْر (baḥr)</title>
<style>
  body { margin: 0; padding: 0; background: #041621; }
  a { color: #c8dde2; }
  @media (max-width: 620px) { .px { padding-left: 20px !important; padding-right: 20px !important; } }
</style>
</head>
<body style="margin:0;padding:0;background:#041621;">
<div style="display:none;max-height:0;overflow:hidden;opacity:0;color:#041621;">baḥr: sea. I am the sea; in its depths the pearls lie hidden.</div>
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0" bgcolor="#041621" style="background:#041621;background-image:linear-gradient(180deg,#0e3a47 0%,#041621 420px);">
<tr><td align="center" style="padding:28px 12px 40px;">
<table role="presentation" width="600" cellpadding="0" cellspacing="0" border="0" style="width:100%;max-width:600px;">

<tr><td align="center" style="padding:0 0 18px;font-family:'Cormorant Garamond', Georgia, 'Times New Roman', serif;font-size:17px;font-style:italic;letter-spacing:1px;color:#c8dde2;">
  <span lang="ar" dir="rtl" style="font-family:'Noto Naskh Arabic', 'Geeza Pro', 'Arabic Typesetting', 'Traditional Arabic', Tahoma, serif;font-style:normal;font-size:21px;color:#f4efe3;">دُرَّةُ اليَوْم</span>
  &nbsp;·&nbsp; Pearl of the Day &nbsp;·&nbsp; Thursday 24 September
</td></tr>
<tr><td align="center" style="padding:0 0 26px;">
  <a href="https://durar.example/word/bahr" style="text-decoration:none;color:#f4efe3;">
    <img src="https://img.durar.space/cards/email/bahr-a60d7be54c8c7b0e.png" width="560" alt="بَحْر (baḥr): sea" style="display:block;width:100%;max-width:560px;height:auto;border:0;border-radius:18px;background:#0b2a36;color:#f4efe3;font-family:'Cormorant Garamond', Georgia, 'Times New Roman', serif;font-size:24px;line-height:1.4;">
  </a>
</td></tr>
<tr><td class="px" align="center" style="padding:0 40px;">
  <p style="margin:0 0 4px;font-family:'Cormorant Garamond', Georgia, 'Times New Roman', serif;font-size:20px;font-style:italic;letter-spacing:1px;color:#c8dde2;">baḥr</p>
  <p style="margin:0;font-family:'Cormorant Garamond', Georgia, 'Times New Roman', serif;font-size:26px;line-height:1.3;color:#f4efe3;">sea</p>
  <p style="margin:6px 0 0;font-family:'Cormorant Garamond', Georgia, 'Times New Roman', serif;font-size:18px;font-style:italic;line-height:1.4;color:#c8dde2;">a vast expanse; a person of boundless knowledge or generosity</p>
</td></tr>
<tr><td class="px" align="center" style="padding:26px 40px 0;">
  <table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0" bgcolor="#0b2a36" style="background:#0b2a36;border-radius:16px;">
    <tr><td align="center" style="padding:20px 24px;">
      <p lang="ar" dir="rtl" style="margin:0 0 8px;font-family:'Noto Naskh Arabic', 'Geeza Pro', 'Arabic Typesetting', 'Traditional Arabic', Tahoma, serif;font-size:24px;line-height:1.7;color:#f4efe3;direction:rtl;unicode-bidi:embed;">أنا البحر في أحشائه الدر كامن</p>
      <p style="margin:0;font-family:'Cormorant Garamond', Georgia, 'Times New Roman', serif;font-size:18px;font-style:italic;line-height:1.45;color:#c8dde2;">I am the sea; in its depths the pearls lie hidden.</p>
      <p style="margin:6px 0 0;font-family:'Cormorant Garamond', Georgia, 'Times New Roman', serif;font-size:14px;color:#8fb0b8;">— Hafez Ibrahim, speaking as the Arabic language</p>
    </td></tr>
  </table>
</td></tr>
<tr><td align="center" style="padding:30px 20px 4px;"><table role="presentation" cellpadding="0" cellspacing="0" border="0" align="center" style="margin:0 auto;">
  <tr><td align="center" bgcolor="#dff0ef" style="border-radius:999px;background:#dff0ef;">
    <a href="https://durar.example/word/bahr" style="display:inline-block;padding:14px 30px;font-family:-apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;font-size:15px;font-weight:600;line-height:1;color:#06232b;text-decoration:none;border-radius:999px;">Open in Durar</a>
  </td></tr>
</table></td></tr>
<tr><td class="px" align="center" style="padding:28px 40px 0;font-family:-apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;font-size:12px;line-height:1.6;color:#8fb0b8;">
  <p style="margin:0 0 8px;">You’re receiving this because you subscribed to the Pearl of the Day, or have a Durar account, with this address. One email a day, around 7:00 in Amsterdam.</p>
  <p style="margin:0;"><a href="https://durar.example/unsubscribe?token=abc.def" style="color:#c8dde2;text-decoration:underline;">Unsubscribe</a> &nbsp;·&nbsp; <a href="https://durar.example/privacy" style="color:#c8dde2;text-decoration:underline;">Privacy</a> &nbsp;·&nbsp; <a href="mailto:hello@durar.example" style="color:#c8dde2;text-decoration:underline;">hello@durar.example</a></p>
</td></tr>
</table>
</td></tr>
</table>
</body>
</html>"
`;

exports[`daily email > matches the snapshot > subject 1`] = `"Pearl of the Day: بَحْر (baḥr)"`;

exports[`daily email > matches the snapshot > text 1`] = `
"دُرَّةُ اليَوْم · Pearl of the Day · Thursday 24 September

بَحْر
baḥr
sea
a vast expanse; a person of boundless knowledge or generosity

أنا البحر في أحشائه الدر كامن
I am the sea; in its depths the pearls lie hidden.
— Hafez Ibrahim, speaking as the Arabic language

Open in Durar: https://durar.example/word/bahr

—
You’re receiving this because you subscribed to the Pearl of the Day, or have a Durar account, with this address. One email a day, around 7:00 in Amsterdam.
Unsubscribe: https://durar.example/unsubscribe?token=abc.def
Privacy: https://durar.example/privacy
Contact: hello@durar.example"
`;

exports[`daily email > “A pearl to revisit”: one line under the main card, live RTL text, linked, and in the plain text > html with revisit 1`] = `
"<!doctype html>
<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
<meta name="x-apple-disable-message-reformatting">
<meta name="color-scheme" content="light dark">
<meta name="supported-color-schemes" content="light dark">
<title>Pearl of the Day: بَحْر (baḥr)</title>
<style>
  body { margin: 0; padding: 0; background: #041621; }
  a { color: #c8dde2; }
  @media (max-width: 620px) { .px { padding-left: 20px !important; padding-right: 20px !important; } }
</style>
</head>
<body style="margin:0;padding:0;background:#041621;">
<div style="display:none;max-height:0;overflow:hidden;opacity:0;color:#041621;">baḥr: sea. I am the sea; in its depths the pearls lie hidden.</div>
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0" bgcolor="#041621" style="background:#041621;background-image:linear-gradient(180deg,#0e3a47 0%,#041621 420px);">
<tr><td align="center" style="padding:28px 12px 40px;">
<table role="presentation" width="600" cellpadding="0" cellspacing="0" border="0" style="width:100%;max-width:600px;">

<tr><td align="center" style="padding:0 0 18px;font-family:'Cormorant Garamond', Georgia, 'Times New Roman', serif;font-size:17px;font-style:italic;letter-spacing:1px;color:#c8dde2;">
  <span lang="ar" dir="rtl" style="font-family:'Noto Naskh Arabic', 'Geeza Pro', 'Arabic Typesetting', 'Traditional Arabic', Tahoma, serif;font-style:normal;font-size:21px;color:#f4efe3;">دُرَّةُ اليَوْم</span>
  &nbsp;·&nbsp; Pearl of the Day &nbsp;·&nbsp; Thursday 24 September
</td></tr>
<tr><td align="center" style="padding:0 0 26px;">
  <a href="https://durar.example/word/bahr" style="text-decoration:none;color:#f4efe3;">
    <img src="https://img.durar.space/cards/email/bahr-a60d7be54c8c7b0e.png" width="560" alt="بَحْر (baḥr): sea" style="display:block;width:100%;max-width:560px;height:auto;border:0;border-radius:18px;background:#0b2a36;color:#f4efe3;font-family:'Cormorant Garamond', Georgia, 'Times New Roman', serif;font-size:24px;line-height:1.4;">
  </a>
</td></tr>
<tr><td class="px" align="center" style="padding:0 40px;">
  <p style="margin:0 0 4px;font-family:'Cormorant Garamond', Georgia, 'Times New Roman', serif;font-size:20px;font-style:italic;letter-spacing:1px;color:#c8dde2;">baḥr</p>
  <p style="margin:0;font-family:'Cormorant Garamond', Georgia, 'Times New Roman', serif;font-size:26px;line-height:1.3;color:#f4efe3;">sea</p>
  <p style="margin:6px 0 0;font-family:'Cormorant Garamond', Georgia, 'Times New Roman', serif;font-size:18px;font-style:italic;line-height:1.4;color:#c8dde2;">a vast expanse; a person of boundless knowledge or generosity</p>
</td></tr>
<tr><td class="px" align="center" style="padding:26px 40px 0;">
  <table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0" bgcolor="#0b2a36" style="background:#0b2a36;border-radius:16px;">
    <tr><td align="center" style="padding:20px 24px;">
      <p lang="ar" dir="rtl" style="margin:0 0 8px;font-family:'Noto Naskh Arabic', 'Geeza Pro', 'Arabic Typesetting', 'Traditional Arabic', Tahoma, serif;font-size:24px;line-height:1.7;color:#f4efe3;direction:rtl;unicode-bidi:embed;">أنا البحر في أحشائه الدر كامن</p>
      <p style="margin:0;font-family:'Cormorant Garamond', Georgia, 'Times New Roman', serif;font-size:18px;font-style:italic;line-height:1.45;color:#c8dde2;">I am the sea; in its depths the pearls lie hidden.</p>
      <p style="margin:6px 0 0;font-family:'Cormorant Garamond', Georgia, 'Times New Roman', serif;font-size:14px;color:#8fb0b8;">— Hafez Ibrahim, speaking as the Arabic language</p>
    </td></tr>
  </table>
</td></tr>
<tr><td class="px" align="center" style="padding:22px 40px 0;font-family:'Cormorant Garamond', Georgia, 'Times New Roman', serif;font-size:18px;line-height:1.5;color:#c8dde2;">
  <p style="margin:0;">A pearl to revisit: <a href="https://durar.example/word/sarab" style="color:#f4efe3;text-decoration:underline;"><span lang="ar" dir="rtl" style="font-family:'Noto Naskh Arabic', 'Geeza Pro', 'Arabic Typesetting', 'Traditional Arabic', Tahoma, serif;font-size:22px;">سَرَاب</span> (sarāb)</a> — mirage</p>
</td></tr>
<tr><td align="center" style="padding:30px 20px 4px;"><table role="presentation" cellpadding="0" cellspacing="0" border="0" align="center" style="margin:0 auto;">
  <tr><td align="center" bgcolor="#dff0ef" style="border-radius:999px;background:#dff0ef;">
    <a href="https://durar.example/word/bahr" style="display:inline-block;padding:14px 30px;font-family:-apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;font-size:15px;font-weight:600;line-height:1;color:#06232b;text-decoration:none;border-radius:999px;">Open in Durar</a>
  </td></tr>
</table></td></tr>
<tr><td class="px" align="center" style="padding:28px 40px 0;font-family:-apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;font-size:12px;line-height:1.6;color:#8fb0b8;">
  <p style="margin:0 0 8px;">You’re receiving this because you subscribed to the Pearl of the Day, or have a Durar account, with this address. One email a day, around 7:00 in Amsterdam.</p>
  <p style="margin:0;"><a href="https://durar.example/unsubscribe?token=abc.def" style="color:#c8dde2;text-decoration:underline;">Unsubscribe</a> &nbsp;·&nbsp; <a href="https://durar.example/privacy" style="color:#c8dde2;text-decoration:underline;">Privacy</a> &nbsp;·&nbsp; <a href="mailto:hello@durar.example" style="color:#c8dde2;text-decoration:underline;">hello@durar.example</a></p>
</td></tr>
</table>
</td></tr>
</table>
</body>
</html>"
`;

exports[`daily email > “A pearl to revisit”: one line under the main card, live RTL text, linked, and in the plain text > text with revisit 1`] = `
"دُرَّةُ اليَوْم · Pearl of the Day · Thursday 24 September

بَحْر
baḥr
sea
a vast expanse; a person of boundless knowledge or generosity

أنا البحر في أحشائه الدر كامن
I am the sea; in its depths the pearls lie hidden.
— Hafez Ibrahim, speaking as the Arabic language

A pearl to revisit: سَرَاب (sarāb) — mirage: https://durar.example/word/sarab
Open in Durar: https://durar.example/word/bahr

—
You’re receiving this because you subscribed to the Pearl of the Day, or have a Durar account, with this address. One email a day, around 7:00 in Amsterdam.
Unsubscribe: https://durar.example/unsubscribe?token=abc.def
Privacy: https://durar.example/privacy
Contact: hello@durar.example"
`;
